--- a/Models/Vocoder/2025.01.02_RingFormer.md
+++ b/Models/Vocoder/2025.01.02_RingFormer.md
@@ -52,6 +52,9 @@ Our code and audio samples are available on GitHub.
 
 ## 1·Introduction: 引言
 
+<details>
+<summary>展开原文</summary>
+
 Audio generation models have become core technologies in various application fields such as speech synthesis, music generation, and sound effect creation.
 Recent advancements have significantly enhanced generation quality and stability through generative adversarial network (GAN)-based models (e.g., [Parallel WaveGAN [1]](2019.10.25_Parallel_WaveGAN.md), [HiFi-GAN [2]](2020.10.12_HiFi-GAN.md), [BigVGAN [3]](2022.06.09_BigVGAN.md), [Avocodo [4]](2022.06.27_Avocodo.md)) and diffusion models (e.g., [Grad-TTS [5]](../Acoustic/2021.05.13_Grad-TTS.md), [WaveGrad [6]](2020.09.02_WaveGrad.md), [Diff-TTS [7]](../Acoustic/2021.04.03_Diff-TTS.md), [E3 TTS [8]](../Diffusion/2023.11.02_E3_TTS.md)), both aiming to achieve high-quality speech synthesis.
 
@@ -63,7 +66,7 @@ Studies suggest that vocoders influence more than 50% of the overall system perf
 
 GAN-based vocoders ([Parallel WaveGAN [1]](2019.10.25_Parallel_WaveGAN.md), [HiFi-GAN [2]](2020.10.12_HiFi-GAN.md), [BigVGAN [3]](2022.06.09_BigVGAN.md), [Avocodo [4]](2022.06.27_Avocodo.md)) have emerged as a leading approach due to their ability to generate high-resolution speech in real-time.
 This capability makes them suitable for tasks such as TTS and speech restoration.
-However, GANbased models face inherent challenges: while they produce sharp and detailed audio, they struggle with capturing long-term dependencies and complex patterns crucial for high-fidelity speech.
+However, GAN-based models face inherent challenges: while they produce sharp and detailed audio, they struggle with capturing long-term dependencies and complex patterns crucial for high-fidelity speech.
 Furthermore, training GAN models can be unstable, leading to mode collapse or inconsistencies in the generated audio.
 Despite these drawbacks, GAN-based vocoders remain a strong choice for real-time and high-resolution applications.
 
@@ -89,6 +92,46 @@ This hybrid architecture, ***RingFormer***, balances the tradeoffs between speed
 
 The remainder of this paper is organized as follows: Section II reviews related work.
 Section III describes the proposed model architecture, Section IV explains the loss functions, Section V presents experimental results and performance analysis, and Section VI concludes the paper.
+
+</details>
+<br>
+
+音频生成模型已经变成各种应用领域如语音合成, 音乐生成的音效创作等的核心技术.
+近期进展显著增强了生成质量和稳定性, 通过基于生成对抗网络 GAN 的模型 ([Parallel WaveGAN [1]](2019.10.25_Parallel_WaveGAN.md), [HiFi-GAN [2]](2020.10.12_HiFi-GAN.md), [BigVGAN [3]](2022.06.09_BigVGAN.md), [Avocodo [4]](2022.06.27_Avocodo.md)) 和扩散模型 ([Grad-TTS [5]](../Acoustic/2021.05.13_Grad-TTS.md), [WaveGrad [6]](2020.09.02_WaveGrad.md), [Diff-TTS [7]](../Acoustic/2021.04.03_Diff-TTS.md), [E3 TTS [8]](../Diffusion/2023.11.02_E3_TTS.md)) 实现, 旨在实现高质量语音合成.
+
+文本转语音模型, 将输入文本映射到输出语音, 近年来通过利用生成式模型的最新进展取得了重大进展.
+声码器作为 TTS 系统的组件之一, 在决定最终音频质量上扮演者至关重要的角色.
+它们负责将中间音频表示, 如梅尔频谱图 (Mel-spectrograms), 转换为音频波形.
+高性能的声码器对于实现自然且高保真语音至关重要, 因为它直接影响输出音频的清晰度和时序一致性.
+研究表明声码器影响系统性能的比例高达 50%, 强调其重要性.
+
+基于 GAN 的声码器 ([Parallel WaveGAN [1]](2019.10.25_Parallel_WaveGAN.md), [HiFi-GAN [2]](2020.10.12_HiFi-GAN.md), [BigVGAN [3]](2022.06.09_BigVGAN.md), [Avocodo [4]](2022.06.27_Avocodo.md)) 由于其能实时生成高分辨率语音的能力而成为主流方法.
+这种能力使得它们适合用于 TTS 和语音修复等任务.
+然而基于 GAN 的模型面临着固有挑战: 虽然它们产生清晰而详细的音频, 它们在捕捉长期依赖和复杂模式方面仍然存在困难.
+此外, 训练 GAN 模型可能不稳定, 导致模式崩溃或生成音频不一致.
+尽管存在这些缺陷, 基于 GAN 的声码器仍然是实时和高分辨率应用的强大选择.
+
+扩散模型 ([Grad-TTS [5]](../Acoustic/2021.05.13_Grad-TTS.md), [WaveGrad [6]](2020.09.02_WaveGrad.md), [Diff-TTS [7]](../Acoustic/2021.04.03_Diff-TTS.md), [E3 TTS [8]](../Diffusion/2023.11.02_E3_TTS.md)) 则由于其能提升音频生成过程的稳定性和质量而获得了关注.
+通过采用逐步细化过程, 扩散模型可以生成一致且听起来自然的语音, 优于捕捉复杂和微妙的音频细节.
+这使得它们特别适用于高质量, 非实时合成.
+然而, 近期研究指出这些模型可能在时间敏感应用方面有所限制, 因为生成速度较慢且计算需求较高.
+
+- 除了 GAN 和扩散模型, 基于流的模型 ([WaveGlow [9]](2018.10.31_WaveGlow.md), [Flow-TTS [10]](../Acoustic/2020.04.09_Flow-TTS.md), [P-Flow [11]](../Flow/P-Flow.md), [ReFlowTTS [12]](../Flow/2023.09.29_ReFlow-TTS.md)) 和自回归模型 ([Tacotron [13]](../Acoustic/2017.03.29_Tacotron.md), [NaturalSpeech [14]](../E2E/2022.05.09_NaturalSpeech.md)) 也为提升效率和质量做出了贡献.
+自回归模型在建模语音自然流动方面表现优越但往往牺牲了速度以换取质量.
+基于流的模型在速度和保真度之间取得了平衡, 但在语音合成领域中不如 GAN 和扩散模型广泛使用.
+- 优化的架构如 [iSTFT-Net [15]](2022.03.04_iSTFTNet.md) 进一步提升实时处理效率
+- 多模态音频生成模型利用文本, 图像, 视频等输入, 开辟了新的创新应用的可能性.
+- 非自回归方法 (如 [FastSpeech [16]](../Acoustic/2019.05.22_FastSpeech.md), [Parallel WaveGAN [1]](2019.10.25_Parallel_WaveGAN.md)) 也在提升速度和质量方面取得了显著进展, 使得实时和交互式应用成为可能.
+
+虽然有了这些进展, 仍然存在着重要挑战.
+- 基于 GAN 的声码器在生成高分辨率音频上有效但仍难以捕捉长期依赖, 导致质量下降.
+- 扩散模型提升了稳定性但计算代价高昂且不适用于实时应用, 因为其内在的序列性.
+
+为了解决这些问题, 我们提出了一种新的基于 GAN 的声码器 ***RingFormer*** 融合了卷积增强的 Transformer ([Conformer [17]](../ASR/2020.05.16_Conformer.md)), 和一种高效的环注意力机制 ([Ring Attention [18]](../../Modules/Attention/RingAttention.md)).
+- GAN 提供实时合成所需的速度和高分辨率, 而 ***RingFormer*** 则利用 Conformer 架构更好地捕捉局部细节和全局依赖, 克服了传统基于 GAN 模型的关键弱点.
+- 此外, 环注意力增强计算效率, 通过将注意力集中在局部区域的同时保持对全局依赖的建模能力.
+
+采用这种混合架构的 ***RingFormer*** 对速度和分辨率进行了权衡, 达到了实时语音合成所需的时序分辨率和效率的同时, 保持了现代 TTS 系统期望的高质量音频输出.
 
 ## 2·Related Works: 相关工作
 
