--- a/Models/Vocoder/2025.01.02_RingFormer.md
+++ b/Models/Vocoder/2025.01.02_RingFormer.md
@@ -459,6 +459,9 @@ $F(\cdot)$ 表示数据信号的短时傅里叶变换.
 
 #### Feature Matching Loss: 特征匹配损失
 
+<details>
+<summary>展开原文</summary>
+
 The feature matching loss $\mathcal{L}_{fm}$ ([MelGAN [21]](2019.10.08_MelGAN.md)) minimizes the $l_1$ distance between the intermediate features extracted from the discriminator layers:
 
 $$
@@ -468,7 +471,22 @@ $$
 where $T$ is the number of layers in the sub-discriminator $D_k$, and $N_i$ is the number of features in the 𝑖-th layer.
 The feature matching loss encourages the generator to produce outputs whose intermediate features are similar to those of the real data, improving the generator's ability to match the discriminator's learned feature representations.
 
+</details>
+<br>
+
+特征匹配损失 $\mathcal{L}_{fm}$ ([MelGAN [21]](2019.10.08_MelGAN.md)) 最小化从判别器层提取的中间特征的 $l_1$ 距离:
+
+$$
+\mathcal{L}_{fm} = \mathbb{E}_{x,z} [\sum_{i=1}^{T} \dfrac{1}{N_i} \| D_k^i(x) - D_k^i(G_{\phi}(z)) \|_1]
+$$
+
+其中 $T$ 是子判别器 $D_k$ 中的层数, $N_i$ 是第 $i$ 层特征的数量.
+特征匹配损失鼓励生成器生成与真实数据相似的输出, 提升生成器的能力以匹配判别器学习到的特征表示.
+
 #### Final Loss: 最终损失
+
+<details>
+<summary>展开原文</summary>
 
 The proposed ***RingFormer*** is implemented to replace the decoder of the widely used end-to-end TTS model, VITS.
 While the training environment is integrated with VITS, ***RingFormer*** is not dependent on it.
@@ -488,6 +506,32 @@ $$
 The hyperparameters $\lambda_{sd}$, $\lambda_{fm}$, $\lambda_{recon}$, $\lambda_{KL}$, $\lambda_{dur}$ are all set to 1 in this study.
 This decision was made because the magnitudes of the individual observed loss values were similar.
 By setting these hyperparameters to 1, we ensure that each loss component contributes equally to the total loss without introducing arbitrary scaling factors, thereby facilitating a balanced optimization process.
+
+</details>
+<br>
+
+所提出的 ***RingFormer*** 被实现成替换广泛使用的端到端 TTS 模型 VITS 的解码器.
+虽然训练环境与 VITS 集成, 但 ***RingFormer*** 并不依赖于它.
+
+和如 [FastSpeech [16]](../Acoustic/2019.05.22_FastSpeech.md) 等模型不同, VITS 消除了对单独时长预测或对齐器的依赖 (如 [Tacotron [13]](../Acoustic/2017.03.29_Tacotron.md) 中的注意力对齐).
+此外, VITS 结合了 GAN 和 [变分自编码器 (VAE) [28]](../_Basis/VAE.md), 生成高分辨率和自然听感的语音.
+
+本文的 ***RingFormer*** 采用了来自 VITS 的两个额外损失函数进行优化.
+- $\mathcal{L}_{dur}$ 用于促进学习文本-语音对齐,
+- $\mathcal{L}_{KL}$ 扮演着重要角色, 它在潜在空间中对文本和语音的关系进行建模.
+$\mathcal{L}_{KL}$ 控制潜变量的分布, 使得自然语音合成成为可能, 并支持无对齐结构.
+
+这两个损失函数在训练模型时不作修改.
+
+总损失函数定义如下:
+
+$$
+\mathcal{L} = \mathcal{L}_{adv} + \lambda_{sd} \mathcal{L}_{sd} + \lambda_{fm} \mathcal{L}_{fm} + \lambda_{recon} \mathcal{L}_{recon} + \lambda_{KL} \mathcal{L}_{KL} + \lambda_{dur} \mathcal{L}_{dur}
+$$
+
+超参数 $\lambda_{sd}$, $\lambda_{fm}$, $\lambda_{recon}$, $\lambda_{KL}$, $\lambda_{dur}$ 均设置为 1.
+这一决定是因为各个观察到的损失值的大小相似.
+通过设定这些超参数为 1, 我们可以确保各个损失组件在总损失中所占比例相等, 而无需引入任意的缩放因子, 从而促进平衡的优化过程.
 
 ## 4·Experiments: 实验
 
