--- a/Models/Vocoder/2025.01.02_RingFormer.md
+++ b/Models/Vocoder/2025.01.02_RingFormer.md
@@ -616,6 +616,9 @@ The attention values are generally evenly distributed, supporting the role of th
 
 ## 6·Conclusions: 结论
 
+<details>
+<summary>展开原文</summary>
+
 In this paper, we propose ***RingFormer***, a vocoder that efficiently processes long sequences with long-term dependencies through a Conformer block with Ring Attention, while maintaining a reasonable memory usage to synthesize high-quality speech.
 This structure captures both local and global dependencies in speech signals, enabling the generation of more natural-sounding speech.
 Additionally, to improve generation speed, the output layer incorporates an inverse STFT structure, and by adding phase and magnitude losses to the loss function, it finely learns temporal patterns and amplitude information, thereby enhancing the quality of the synthesized speech.
@@ -623,3 +626,18 @@ For adversarial training, we introduce the recently released MS-SB-CQT discrimin
 Through various objective metrics such as MCD, WER, STOI, and NISQA, as well as MOS and CMOS evaluations, we verify that ***RingFormer*** performs on par with or better than existing models, successfully achieving natural speech and clarity.
 This study presents a model that balances fast speech synthesis speed and high quality, contributing to the advancement of speech synthesis technology.
 Future research will aim to expand the applicability of ***RingFormer*** by optimizing it for multilingual datasets and various application environments.
+
+</details>
+<br>
+
+本文提出了 ***RingFormer***, 一种利用带环注意力的 Conformer 块有效处理具有长期依赖的长序列的声码器, 在保持合理内存占用情况下生成高质量语音.
+这种结构捕获了语音信号中的局部和全局依赖, 能够生成听感更自然的语音.
+
+此外, 为了提升生成速度, 输出层结合了逆短时傅里叶变换结构, 并通过引入相位和幅度损失, 精细学习时域模式和振幅信息, 增强了合成语音的质量.
+
+对于对抗训练, 我们引入了近期发布的 MS-SB-CQT 判别器, 它通过更精确地评估连续序列, 提高了语音合成的精度.
+
+通过多种客观指标如 MCD, WER, STOI, NISQA, 以及 MOS, CMOS 评估, 我们验证了 ***RingFormer*** 与现有模型的性能相当或更优, 成功实现了自然语音和清晰度.
+
+本研究展示了一种平衡快速语音合成速度和高质量的模型, 促进了语音合成技术的发展.
+未来研究将着手优化 ***RingFormer*** 以适应多语言数据集和多种应用环境.
