Update RingFormer Experiments

--- a/Models/Vocoder/2025.01.02_RingFormer.md
+++ b/Models/Vocoder/2025.01.02_RingFormer.md
@@ -5,8 +5,8 @@
 
 - 标题: "RingFormer: A Neural Vocoder with Ring Attention and Convolution-Augmented Transformer"
 - 作者:
-  - 01 Seongho Hong
-  - 02 Yong-Hoon Choi
+  - 01 Seongho Hong (Kwangwoon University)
+  - 02 Yong-Hoon Choi (Kwangwoon University)
 - 链接:
   - [ArXiv](https://arxiv.org/abs/2501.01182)
   - [Publication]()
@@ -535,12 +535,28 @@ $$
 
 ## 4·Experiments: 实验
 
+<details>
+<summary>展开原文</summary>
+
 To validate the performance of ***RingFormer***, it is applied to the decoder of the widely used TTS model, [VITS [26]](../E2E/2021.06.11_VITS.md), and the quality of the synthesized speech is evaluated.
 For comparison, the baseline vocoders used are [HiFi-GAN [2]](2020.10.12_HiFi-GAN.md), [iSTFTNet [15]](2022.03.04_iSTFTNet.md), and [BigVGAN [3]](2022.06.09_BigVGAN.md), which are state-of-the-art models known for achieving top performance in the field.
 These models are also applied to VITS with the same architecture and hyperparameters to ensure a fair comparison under equal conditions.
 Our code and audio samples are available on [GitHub [34]](https://github.com/seongho608/RingFormer).
 
+</details>
+<br>
+
+为了验证 ***RingFormer*** 的性能, 我们将其应用到广泛使用的 TTS 模型 [VITS [26]](../E2E/2021.06.11_VITS.md) 的解码器, 并评估合成语音的质量.
+为了进行比较, 我们使用了 [HiFi-GAN [2]](2020.10.12_HiFi-GAN.md), [iSTFTNet [15]](2022.03.04_iSTFTNet.md), 和 [BigVGAN [3]](2022.06.09_BigVGAN.md) 作为基线解码器, 这些模型在该领域是著名的先进模型.
+
+这些模型也被用于 VITS 中, 使用相同架构和超参数以确保在相同条件下进行公平的比较.
+
+我们在 [GitHub [34]](https://github.com/seongho608/RingFormer) 上提供了代码和音频示例.
+
 ### Datasets: 数据集
+
+<details>
+<summary>展开原文</summary>
 
 In this study, we trained and evaluated the model using the widely used [LJSpeech dataset [29]](../../Datasets/2017.07.05_LJSpeech.md).
 The LJSpeech dataset consists of 13,100 high-quality speech samples, totaling approximately 24 hours of speech data.
@@ -549,7 +565,21 @@ In this study, 500 samples from the 13,100 LJSpeech samples were allocated to th
 To further evaluate the model's performance, 30 samples were randomly selected from the remaining 100 samples for final testing.
 This data configuration ensured consistent and reliable training and evaluation.
 
+</details>
+<br>
+
+我们在广泛使用的 [LJSpeech 数据集 [29]](../../Datasets/2017.07.05_LJSpeech.md) 上训练和评估模型.
+该数据集包括 13,100 个高质量语音样本, 总计约 24 小时语音数据.
+每个样本都以 22,050 Hz 的采样率录制, 对应英文文本, 并在 TTS 研究中被广泛使用.
+
+本研究中选择 500 个样本作为验证集用于评估模型性能, 12,500 个样本用于训练.
+为了进一步评估模型性能, 剩余 100 个样本将随机选择 30 个样本进行最终测试.
+这一数据配置确保了一致且可靠的训练和评估.
+
 ### Experimental Setup: 实验设置
+
+<details>
+<summary>展开原文</summary>
 
 The proposed generator in this study employs two stages of upsampling.
 Initially, the number of channels is set to 512, and at each stage, the number of channels is halved according to $2^i$, where $i$ denotes the upsampling step.
@@ -559,22 +589,55 @@ Key hyperparameters are summarized in Table 1.
 The model training is conducted on an Ubuntu 20.04 LTS operating system, with Docker used for managing software dependencies.
 The training process is carried out using a single Nvidia A100 GPU with 80GB of memory.
 
+</details>
+<br>
+
+本研究所提出的生成器采用了两阶段上采样.
+首先, 通道数设置为 512, 每个阶段通道数减半, 即 $2^i$, 其中 $i$ 表示上采样步数.
+Conformer 块的配置是根据每个上采样阶段调整输入维度.
+它使用 8 个注意头, 前馈网络维度为输入的一半, 2 个 Conformer 层, 卷积核大小为 31, 随机失活率为 0.1.
+关键超参数总结在表 1 中.
+
+![](Images/2025.01.02_RingFormer_Tab.01.png)
+
+模型训练在 Ubuntu 20.04 LTS 操作系统上进行, 使用 Docker 管理软件依赖.
+训练过程使用单个 Nvidia A100 GPU, 80GB 内存.
+
 ### Evaluation Metrics: 评价指标
+
+<details>
+<summary>展开原文</summary>
 
 In this study, the model's performance is evaluated from multiple perspectives using [mel-cepstral distortion (MCD) [30]](../../Evaluations/MCD.md), word error rate (WER), [short-time objective intelligibility (STOI) [31]](../../Evaluations/STOI.md), [NISQA [32]](../../Evaluations/2021.04.19_NISQA.md), mean opinion score (MOS), and comparison MOS (CMOS).
 
 MCD measures the difference in mel-frequency cepstral coefficients between the synthesized and reference speech.
 A lower MCD value indicates higher similarity between the two voices.
+
 WER evaluates the accuracy of speech recognition by measuring the alignment of the recognized text with the original transcript.
 A lower WER indicates fewer recognition errors.
+
 STOI quantifies the intelligibility of the synthesized speech in relation to the reference, with values ranging from 0 to 1.
 A value closer to 1 indicates higher intelligibility.
+
 NISQA is a deep learning-based metric for assessing the quality and naturalness of speech by mimicking human auditory perception and quantifying the subjective quality of speech.
 
 MOS is a subjective evaluation metric, where listeners rate the speech quality on a scale from 1 to 5.
 However, in this study, we utilize the MOS prediction system from [UTMOS [33]](../../Evaluations/2022.04.05_UTMOS.md) for objective evaluation, which produces scores highly correlated with human ratings.
 Finally, CMOS is used to compare the relative quality between two speech samples, allowing listeners to select the better-quality sample, thus performing a subjective comparison.
 These diverse metrics enable a comprehensive evaluation of the model’s speech quality, intelligibility, and pronunciation accuracy.
+
+</details>
+<br>
+
+在本研究中, 从多个视角评估模型的性能:
+- [Mel-Cepstral Distortion (MCD) [30]](../../Evaluations/MCD.md) 衡量合成语音与参考语音的梅尔频率倒谱系数 (MFCC) 之间的差异. 较低的 MCD 值表示两个声音之间的相似度较高.
+- WER 评估语音识别的准确性, 通过测量识别出的文本与原始文本的对齐程度来衡量. 较低的 WER 表示识别错误较少.
+- [Short-Time Objective Intelligibility (STOI) [31]](../../Evaluations/STOI.md) 量化合成语音和参考之间联系的可理解性, 范围从 0 到 1. 值越接近 1, 语音的可理解性越高.
+- [NISQA [32]](../../Evaluations/2021.04.19_NISQA.md) 是一种基于深度学习的语音质量和自然度评估指标, 通过模仿人类听觉感知和量化语音的主观质量来评估.
+- MOS 是一种主观评估指标, 听众在 1 到 5 之间对语音质量进行打分. 然而, 在本研究中, 我们使用 [UTMOS [33]](../../Evaluations/2022.04.05_UTMOS.md) 提供的 MOS 预测系统进行客观评估, 其得分与人类评分高度相关.
+- CMOS 用于比较两个语音样本的相对质量, 听众可以选择更好的样本, 从而进行主观比较.
+
+这些多样指标实现了模型的语音质量, 可理解性, 和发音准确性的全面评估.
 
 ## 5·Results: 结果
 
