Update RingFormer Results

--- a/Models/Vocoder/2025.01.02_RingFormer.md
+++ b/Models/Vocoder/2025.01.02_RingFormer.md
@@ -306,6 +306,9 @@ As a result, ring attention maintains computational efficiency while achieving h
 这一结构非常适合建模语音信号的时序依赖性和频带内的谐波结构, 能够捕获语音的周期性特征细节.
 特别是, 环注意力有效地解决了声码器处理长序列时遇到的内存瓶颈问题.
 因为键值交换和注意力计算都是跨设备并行处理的, 计算效率被最大化, 显著减少了在训练过程中处理长序列数据的内存和计算成本.
+
+![](Images/2025.01.02_RingFormer_Fig.03.png)
+
 设备内部的块级注意力计算如下所示:
 
 $$
@@ -641,6 +644,9 @@ These diverse metrics enable a comprehensive evaluation of the model’s speech 
 
 ## 5·Results: 结果
 
+<details>
+<summary>展开原文</summary>
+
 We report the performance of ***RingFormer*** and the baseline models evaluated on LJSpeech using the above objective and subjective metrics.
 Table 2 presents the performance evaluation results of ***RingFormer*** and baseline vocoder models.
 
@@ -676,6 +682,70 @@ Figure 4 visualizes this capability through an attention map, where bright patte
 Additionally, Figure 5 illustrates the attention scores for an arbitrary query.
 As shown in the figure, the ***RingFormer*** model assigns notable attention scores even to temporally distant query-key pairs, indicating that it effectively utilizes long-term temporal information during audio generation.
 The attention values are generally evenly distributed, supporting the role of the Conformer block in maintaining a stable and natural temporal structure in the synthesized audio.
+
+</details>
+<br>
+
+我们报告了在 LJSpeech 上使用上述客观和主观指标评估 ***RingFormer*** 和基线模型的性能.
+表格 02 展示了性能评估结果.
+
+![](Images/2025.01.02_RingFormer_Tab.02.png)
+
+- 可以看到 ***RingFormer*** 展现出了整体稳定性, 在 MOS 上取得了最佳结果. 它在 NISQA 指标上保持了一致的质量, 证明其在不引入语音信号扰动的情况下提供可靠的性能.
+- 在 MCD 和 STOI 指标上稍逊于 BigVGAN, 在语音相似度和可理解性上展现了相当的性能.
+- 在 WER 上和其他模型相当, 证明了合成语音可以清晰识别.
+- 此外, 在主观 CMOS 中, ***RingFormer*** 和 BigVGAN 相当, 优于 HiFi-GAN, 表明其在实际应用中能提供高质量音频.
+
+这些结果突出了所提出的模型能够生成更自然的语音质量和更清晰的发音.
+
+---
+
+表格 03 展示了 ***RingFormer*** 和基线模型的参数数量和推理速度.
+
+![](Images/2025.01.02_RingFormer_Tab.03.png)
+
+可以看到所提方法在保持合理模型大小的同时, 取得了高推理速度.
+- 相比 BigVGAN 少了 3.8 倍参数, 推理速度约为 BigVGAN 的两倍.
+  考虑到两者的相似性能, ***RingFormer*** 可以被认为是足够的竞争力.
+- 相比 HiFi-GAN 和 iSTFTNet, ***RingFormer*** 取得了更好的性能, 但参数数量增加了 2.1 到 2.2 倍, 推理速度相似.
+- 此外, 移除环注意力后, 推理速度下降约 1.5 倍, 强调环注意力在提升生成速度方面的作用.
+
+这些结果表明所提方法在生成高质量语音的同时支持实时处理, 进一步增强了它在各种应用中的实用性.
+
+---
+
+表格 04 展示了 ***RingFormer*** 各个组件对合成语音质量的影响.
+
+![](Images/2025.01.02_RingFormer_Tab.04.png)
+
+- 完整模型的 MOS 为 4.11.
+- 移除振幅损失和相位损失后, MOS 下降到 4.05, 表明振幅损失和相位损失对捕获语音的细微周期和振幅信息有贡献.
+- 移除 MS-SB-CQT 判别器后, MOS 也降低了, 表明连续序列判别器的引入对提升语音合成质量有积极贡献.
+- 当两个组件都移除后, MOS 降低到 4.03, 表明振幅损失, 相位损失和 MS-SB-CQT 判别器的组合对提升语音合成质量很重要.
+
+此外, 为了分析 ***RingFormer*** 在更精确地捕获长期依赖方面的能力, 我们通过减少 $z$ 的大小到 $1/2$ 和 $1/4$, 从而减少感受野, 实验了模型的性能.
+结果表明, 当感受野减少时, 评估指标逐渐下降, 证明一个充分的感受野对于 ***RingFormer*** 学习语音的长期依赖性和生成高质量音频都很重要.
+
+---
+
+表格 05 通过分析 F0 轮廓的自相关性, 评估 ***RingFormer*** 在捕获长期依赖方面的能力.
+
+![](Images/2025.01.02_RingFormer_Tab.05.png)
+
+结果表明 ***RingFormer*** 取得了最高的 Pearson 相关系数, 证明其在学习长期依赖性方面的能力.
+
+---
+
+图 04 通过注意力映射可视化了这一能力, 明亮模式即便在远离对角线的区域可能保持, 反映了长期依赖性.
+
+![](Images/2025.01.02_RingFormer_Fig.04.png)
+
+此外图 05 展示了任意查询的注意力得分.
+
+![](Images/2025.01.02_RingFormer_Fig.05.png)
+
+如图所示, ***RingFormer*** 赋予了长期依赖性的注意力得分, 即使是时序距离远的查询-键对, 表明能够在音频生成中有效地利用长期时序信息.
+注意力值通常均匀分布, 与 Conformer 块在保持稳定和自然的时序结构方面的作用相一致.
 
 ## 6·Conclusions: 结论
 
