--- a/Models/SpeechRepresentation/2025.01.02_MuQ.md
+++ b/Models/SpeechRepresentation/2025.01.02_MuQ.md
@@ -38,6 +38,48 @@ Code and checkpoints are open source in [this https URL](https://github.com/tenc
 
 ## 1·Introduction: 引言
 
+Self-supervised learning (SSL) has been introduced into speech and audio signal processing as a technique for learning latent semantic relationships from unlabeled raw data.
+Recently, several works \cite{li2023mert, won2023musicfm} apply SSL to music informatics understanding, and a number of pre-trained foundation models (PFMs) with generalized representation capabilities are built.
+Learning from unsupervised music data, these foundation models can achieve stunning performance in music understanding tasks such as genre classification, emotion prediction, and key detection \cite{yuan2023marble}, and further provide semantic representations for more downstream tasks like music generation \cite{agostinelli2023musiclm} and music captioning \cite{deng2024musilingo}, as illustrated in Figure \ref{fig:task_illu}.
+
+A key challenge in music understanding and representation is that music is an extremely specific modality.
+Unlike speech or environmental sounds, music not only focuses on semantic information, but also emphasizes acoustic information, such as melody, chords, and tonality.
+As a result, previous semantics-oriented SSL methods have struggled to perform well on music tasks\cite{spijkervet2021clmr, li2022mapmusic2vec, yuan2023marble}, as they fail to simultaneously capture both semantic and acoustic information.
+
+Recently, several studies have sought to develop a universal music representation that integrates both semantic and acoustic aspects.
+Among these efforts, two remarkable models are MERT \cite{li2023mert} and MusicFM \cite{won2023musicfm}.
+MERT employs a BERT-style masked language modeling (MLM) proxy task to predict discrete tokens from the masked audio parts, with an Encodec \cite{defossez2022encodec} model as the tokenizer and uses an auxiliary Constant Q-Transform (CQT) target to enhance the modeling of acoustic information.
+MusicFM, on the other hand, directly utilizes a random projection quantizer derived from BEST-RQ \cite{chiu2022bestrq}, and this tokenization approach provides a general target for learning music representation, without the need for additional CQT loss to capture acoustic modeling.
+
+As discussed in \cite{chiu2022bestrq} and \cite{li2023mert}, the target extractor (i.e., tokenizer) plays an important role in SSL, as models are trained to predict the tokenized pseudo-labels.
+BEST-RQ features a lightweight approach that allows for fast extraction of discrete targets.
+However, its performance is highly dependent on the initialization of the random projection layer, often requiring multiple attempts or a specific random seed to achieve optimal results.
+In contrast, the Encodec target \cite{defossez2022encodec} used in MERT produces a series of residual targets, with the multi-target strategy shown beneficial to musical SSL \cite{li2023mert}.
+As a neural codec trained on audio data, Encodec produces more stable labels compared to its random counterparts.
+However, using Encodec as tokenization is computational heavy and consumes a lot of GPU memory when applying online extraction, which can reduce the training efficiency.
+Also, it needs to be coupled with additional CQT reconstruction loss to perform well in acoustic representation.
+
+To address the initialization dependency of the random projection quantizer in BEST-RQ and the inefficiency stemming from the heavy computation cost of Encodec in MERT, we introduce a model called MuQ, which learns \textbf{Mu}sic representations from Mel \textbf{Q}uantization targets.
+MuQ leverages a Mel-RVQ as the tokenizer to generate targets.
+The proposed Mel-RVQ is pre-trained on music data and employs a linear RVQ to directly quantize audio Mel spectrograms.
+Compared to the random-projection quantizer in BEST-RQ, the pre-trained Mel-RVQ produces more stable targets for SSL training and eliminates the model's dependence on initialization.
+Additionally, compared to Encodec, the lightweight single-layer Mel-RVQ architecture offers greater extraction efficiency.
+
+To further demonstrate the capabilities of the proposed MuQ model, we explore its application in another crucial area of music understanding: aligning music and text representations.
+For example, MuLan \cite{huang2022mulan} employs contrastive learning to train both a music encoder and a text encoder, producing semantically consistent embeddings for both modalities and achieving coherent alignment between music and text.
+Recognizing the role that self-supervised learning models can play in providing effective initialization for downstream tasks, we leverage our MuQ to construct a joint music-text embedding model, named MuQ-MuLan.
+
+Our main contributions are listed as follows:
+- We introduce a novel music SSL model MuQ, which demonstrates state-of-the-art performance across a wide range of downstream music understanding tasks over previous MERT and MusicFM models.
+- We propose the Mel Residual Vector Quantization (Mel-RVQ), which directly quantizes the Mel spectrum using a single linear layer RVQ, improving both training stability and efficiency.
+- We further develop the MuQ-MuLan model, trained with contrastive learning on MuQ.
+MuQ-MuLan excels in aligning and jointly encoding music and text modalities, compared with the original MuLan model.
+
+Our experiments demonstrate that the Mel-RVQ significantly enhances SSL performance across a variety of music downstream tasks.
+Notably, MuQ outperforms previous state-of-the-art (SOTA) SSL models MERT and MusicFM, even when trained on just 0.9K hours of data, which is 100x less than what comparable models require \cite{li2023mert, won2023musicfm}.
+Additionally, our results show that MuQ-MuLan achieves a ROC-AUC score of 79.3 on the MagnaTagATune zero-shot music tagging task, surpassing the previous SOTA result\cite{huang2022mulan}.
+
+
 ## 2·Related Works: 相关工作
 
 ## 3·Methodology: 方法
