--- a/Models/SpeechRepresentation/2025.01.02_MuQ.md
+++ b/Models/SpeechRepresentation/2025.01.02_MuQ.md
@@ -234,6 +234,57 @@ where $\mathrm{sim}$ denotes dot-product similarity, and $\sigma$ is temperature
 
 ## 4·Experiments: 实验
 
+### Model Settings
+
+#### MuQ
+
+We stack 12 layers of Conformer in MuQ, with 310M parameters in total.
+The number of codebooks for Mel-RVQ is set to $N=8$ and the codebook size is $K=1024$.
+The input audio is fixed at 30 seconds with a sampling rate of 24K Hz.
+Audio inputs are 128-dimensional Mel spectrum, which are pooled to 25Hz before feeding to Conformer.
+The code is implemented with the Fairseq toolkit \cite{ott2019fairseq}.
+
+#### MuQ-MuLan
+
+We use the pre-trained MuQ as the initialization for the music encoder.
+A pre-trained multilingual RoBERTa model \texttt{xlm-roberta-base}
+% \footnote{\url{https://huggingface.co/FacebookAI/xlm-roberta-base}}
+is used for the text encoder followed by 8 layers of Transformer, with the embedding dimension $d=512$.
+MuQ-MuLan has 630M parameters in total, and all parameters stay unfrozen during the contrastive training.
+
+### Pre-Training
+
+#### Dataset
+
+We initially conduct pre-training on a smaller dataset, Music4all \cite{santana2020music4all}, containing 0.9K hours of open access music data.
+Subsequently, we scale up to a large-scale in-house dataset with 160K hours of music.
+
+#### Training Details
+
+Mel-RVQ is trained on the Music4all dataset using 1 GPU.
+Since the Mel-RVQ is very small (less than 0.3M), the training of Mel-RVQ is extremely fast and it takes less than 1 hour to complete.
+
+All pre-training experiments are running with 32 A100-40G GPUs.
+Batch size is 192, and masking probability $p = 0.6$.
+For the pre-training on the Music4all dataset, we train for only 75K steps.
+For the experiments on the 160K hours of in-house data, we initially train MuQ for 200K steps.
+Subsequently, the $l=10$th layer latent is used to train $\mathrm{Mel\text{-}RVQ_{iter}}$, followed by 150K steps of iterative training from scratch to obtain $\mathrm{MuQ_{iter}}$.
+The entire initial \& iterative pre-training takes about 2 weeks.
+
+### Contrastive Training
+
+#### Dataset
+
+The training data for contrast learning comes from 130K hours of music in-house, each with its corresponding text description.
+The text descriptions are limited to non-personal information such as genre, mood, instrument, tempo, keywords of the music.
+
+#### Training Details
+
+MuQ-Mulan is trained on 32 V100-32G GPUs with a batch size of 768.
+Following the practice of MuLan \cite{huang2022mulan}, we switch to taking 10 seconds as the length of the input audio.
+This significantly reduces memory consumption and enlarges batch size, which is critical for contrastive learning.
+
+
 ## 5·Results: 结果
 
 ## 6·Conclusions: 结论
