--- a/Models/SpeechRepresentation/2025.01.02_MuQ.md
+++ b/Models/SpeechRepresentation/2025.01.02_MuQ.md
@@ -284,6 +284,38 @@ MuQ-Mulan is trained on 32 V100-32G GPUs with a batch size of 768.
 Following the practice of MuLan \cite{huang2022mulan}, we switch to taking 10 seconds as the length of the input audio.
 This significantly reduces memory consumption and enlarges batch size, which is critical for contrastive learning.
 
+### Downstream Tasks
+
+We evaluate MuQ on the MARBLE benchmark \cite{yuan2023marble} and conduct experiments on a total of \NumOfTask downstream tasks.
+Note that all datasets appearing in the downstream tasks are \textbf{not} included in the pre-training data of MuQ.
+
+Due to page limitations, we only provide a brief overview of the downstream tasks here.
+We encourage readers to refer to the Appendix  \uppercase\expandafter{\romannumeral1} for details on these tasks.
+
+- **Genre classification** aims to determine the most suitable genre for a song.
+We use the GTZAN dataset \cite{Tzanetakis_Cook_2002} and report the accuracy scores.
+- **Key detection** predicts the tonal scale and dominant pitch level.
+We use the Giantsteps dataset \cite{Knees_2015_GS}, and a refined accuracy metric \cite{raffel2014mir_eval}.
+- **Emotional analysis** is taken on the Emomusic dataset \cite{Soleymani_Caro_Schmidt_Sha_Yang_2013}.
+ The metrics are determination coefficients for valence ($\mathrm{R2^V}$) and arousal ($\mathrm{R2^A}$) score.
+- **Singer identification** on the VocalSet \cite{Wilkins_2018_vocalset}
+dataset.
+The evaluation metric is accuracy.
+- **Vocal technique detection** on the VocalSet \cite{Wilkins_2018_vocalset}.
+The evaluation metric is accuracy.
+- **Music tagging** involves multi-label classification of 50 tags on the MagnaTagATune \cite{law2009mtt} dataset.
+The metrics are ROC-AUC and average precision (AP).
+- **Music structure analysis** predicts the functional
+label for music segments on the Harmonix dataset \cite{nieto2019harmonix}.
+The evaluation metric is accuracy.
+- **Instrument classification** on the Nsynth dataset \cite{Engel_2017_NSynth}.
+The evaluation metric is accuracy.
+- **Pitch classification** of the 128-pitch on the Nsynth dataset \cite{Engel_2017_NSynth}.
+The metric is accuracy.
+
+In evaluating the pre-trained MuQ, we extract features from each layer and use a linear probe to perform downstream tasks.
+For the MuQ-MuLan experiments, we use a zero-shot approach for music tagging.
+This involves directly calculating the similarity between music and text embeddings to determine the prediction probability for each tag.
 
 ## 5·Results: 结果
 
